# mireiniwr

./: .gitignore  Cargo.toml  README.md
src/: file_signatures.rs  frequency_analysis.rs  lib.rs  os_interactions.rs
tests/: integration_test.rs
tests/testing_files/: smaller_64_bytes.csv  text_file.bib
tests/testing_files/file_char_freq/: ascii_file_0.txt  ascii_file_1.txt  ascii_file_2.txt  ascii_file_3.txt  ascii_file_4.txt  utf16_file_0.txt  utf16_file_2.txt  utf16_file_3.txt  utf16_file_4.txt  utf8_file_0.txt  utf8_file_1.txt  utf8_file_2.txt  utf8_file_3.txt  utf8_file_4.txt  utf8_file_5.txt
tests/testing_files/file_searches/0/: 0.txt  1.txt  4.txt
tests/testing_files/file_searches/1/: 0.txt  2.txt  3.txt  4.txt
tests/testing_files/file_searches/2/: 1.txt  2.txt  3.txt  4.txt
tests/testing_files/file_searches/3/: 1.txt  2.txt  3.txt
tests/testing_files/file_searches/4/: 0.txt  1.txt  3.txt  4.txt
tests/testing_files/file_searches/6/: 0.doc  1.doc  2.doc  3.doc
tests/testing_files/file_searches/7/: 0  1  3  4
